<resources>
    <string name="app_name">Pet Search</string>
    <string name="nav_title_1">Create</string>
    <string name="nav_title_2">Parties</string>
    <string name="nav_title_3">Map</string>
    <string name="nav_title_4">Alerts</string>
    <string name="nav_title_5">Me</string>

    <!--From https://www.androhub.com/login-signup-and-forgot-password-screen-design-android/-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking Sign Up you agree to all of the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Sign in here.</string>
    <string name="registered_email">Please enter your registered Email below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="welcome">WELCOME</string>
    <string name="keep_me_signed_in">Keep me Signed In</string>
    <string name="password_message">Passwords must contain at least 8 characters, 1 capital, 1 lowercase and 1 number</string>
    <string name="password_reset">PASSWORD RESET</string>
    <string name="resend_verification">Resend email verification?</string>
    <string name="tab_parties">Parties</string>
    <string name="tab_events">Events</string>
    <string name="tab_account">Account</string>
    <string name="newPassword">New password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="organize">Organize a Search Party</string>
    <string name="organize_title">Title</string>
    <string name="organize_description">Description</string>
    <string name="addphoto">addPhoto</string>
    <string name="last_location">Last seen location</string>
    <string name="reward">Finder\'s reward</string>
    <string name="organize_welcome_text">Use these fields to create a new Search Party for your lost pet. Other users can view your Search Party and help you find it.</string>
    <string name="add_photo">Add Photo</string>
    <string name="new_email">New Email</string>
    <string name="subscribed">Subscribed</string>
    <string name="subscribe">Subscribe</string>
    <string name="title_activity_maps">Map</string>
    <string name="mark_as_completed">Mark as Completed</string>
    <string name="delete_search_party">Delete Search Party</string>
    <string name="select_a_search_party_to_track">Select a search party to track</string>
    <string name="track_a_search_party">[Track a Search Party…]</string>
    <string name="dropdown">dropdown</string>
    <string name="no_search_party_subscriptions">No search party subscriptions!</string>
    <string name="subscriber_count">[]</string>
    <string name="first_disappearance">First disappearance</string>
    <string name="sighting">Sighting</string>
    <string name="my_searched_area">My Searched Area</string>
    <string name="area_searched_by_others">Area searched by others</string>
    <string name="info_legend">Use the buttons on the left to add a Pet sighting or an area you have searched</string>
    <string name="coming_soon">Coming soon!</string>


</resources>
