<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="nk00322.surrey.petsearch.fragments.SignupFragment">

    <!--Layout adapted from https://www.androhub.com/login-signup-and-forgot-password-screen-design-android/-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/close_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/closebutton"
            android:padding="5dp"
            android:src="@drawable/ic_close_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/signUp"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameLayout"
            style="@style/TextInputLayoutOutlineStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:hint="@string/fullName"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/ic_person_white_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userEmailLayout"
            style="@style/TextInputLayoutOutlineStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameLayout"
            app:startIconDrawable="@drawable/ic_email_white_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobileNumberLayout"
            style="@style/TextInputLayoutOutlineStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:hint="@string/phoneNumber"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userEmailLayout"
            app:startIconDrawable="@drawable/ic_phone_white_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/locationLayout"
            style="@style/TextInputLayoutOutlineStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/location"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobileNumberLayout"
            app:startIconDrawable="@drawable/ic_location_white_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="text"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/TextInputLayoutOutlineStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:hint="@string/password"
            app:errorEnabled="true"

            app:startIconDrawable="@drawable/ic_password_key_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordLayout"
            style="@style/TextInputLayoutOutlineStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="0dp"
            android:hint="@string/confirmPassword"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_password_confirm_white_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/terms_conditions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:buttonTint="@color/white"
            android:text="@string/terms_conditions"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordLayout"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordLayout"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout" />

        <Button
            android:theme="@style/AppTheme.Button"
            android:id="@+id/signUpBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="3dp"
            android:text="@string/signUp"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/terms_conditions"
            app:layout_constraintStart_toStartOf="@+id/terms_conditions"
            app:layout_constraintTop_toBottomOf="@+id/terms_conditions" />

        <TextView
            android:id="@+id/already_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/already_user"
            android:textColor="@color/white_greyish"
            android:textSize="15sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="@+id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>